# binflash

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: benchmark.py  benchmark_bwd.py
binflash/: __init__.py  binflash_attention.py  flex_attention_impl.py  masks.py  reference.py
kernel_variants/: README.md  v001_baseline_scan_skip.py  v002_initial_scan_no_autotune.py  v003_block_size_autotune_buggy.py  v004_scan_fixed_autotune.py  v005_index_manual_pointers.py  v006_index_make_block_ptr_per_iter.py  v007_phi3_style_pointer_grids.py  v008_apply_mask_constexpr.py  v009_3val_mask_early_termination.py  v010_3val_mask_simplified.py  v011_index_make_block_ptr_v2.py  v012_index_tl_advance_delta.py  v013_hybrid_scan_index.py  v014_dual_dispatch_scan_index.py  v015_signbit_encoding.py  v016_two_pass_index_flexattn_style.py  v018_two_pass_scan_constexpr.py  v020_dual_dispatch_06.py  v021_refined_threshold.py  v022_gather_compute.py  v025_splitkv_parallel.py  v027_pre_speculative.py  v028_speculative_kv.py  v029_computed_causal_mask.py  v031_mask_mode_constexpr.py  v032_separate_causal_kernel.py  v035_causal_fast_path.py  v037_preproc_unoptimized.py  v038_optimized_preproc.py  v043_pre_3val_scan.py  v046_causal_fast_path.py  v050_blocksz_autotune_broken.py  v052_v_prefetch.py  v054_all_loads_upfront.py  v055_adaptive_block_m.py  v056_block_n_autotune.py  v057_before_blocksz_autotune.py  v068_block_m_reverted.py  v071_stable.py  (+358 more)
tests/: test_correctness.py  test_correctness_bwd.py
