[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=68", "wheel"]

[project]
authors = [
  {name = "Jonas Geiping", email = "jonas@tue.ellis.eu"},
]
dependencies = [
  "torch>=2.4",
  "triton>=3.0",
]
description = "Flash attention with binary block-mask skipping for sparse attention patterns."
license = {text = "MIT"}
name = "binflash"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.optional-dependencies]
benchmark = [
  "tqdm>=4.66",
]
dev = [
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/seal-rg/binflash"

[tool.setuptools.packages.find]
exclude = ["tests*", "benchmarks*"]
include = ["binflash*"]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
ignore = [
  "E402",
  "E501",
  "E741",
  "B007",
  "B011",
]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
